--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <mat-drawer-container fullscreen>
+  <mat-drawer mode="side" opened="true">
+      <mat-menu ></mat-menu>
+      <a mat-menu-item *ngFor="let item of examples" [routerLink]="item.route" routerLinkActive="active">{{ item.title }}</a>
+  </mat-drawer>
   <mat-drawer-content>
-      <app-line-chart></app-line-chart>
+      <h1>Home</h1>
+      
+      <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
-
