--- a/src/app/line-chart/line-chart.component.html
+++ b/src/app/line-chart/line-chart.component.html
@@ -1,3 +1,6 @@
 
-      <h1>{{ title }}</h1>
-      <div #containerPieChart><svg width="900" height="500"></svg></div>
+    <h1>{{ title }}</h1>
+    <input type="file" accept=".csv" (change)="convertFile($event)" />  
+    <div #containerPieChart><svg width="900" height="500"></svg></div>
+
+      
